--- a/2018/typesetting.tex
+++ b/2018/typesetting.tex
@@ -1,8 +1,6 @@
-\usepackage{microtype}
-
-\usepackage{newunicodechar}
-\newunicodechar{α}{\ensuremath \alpha}
-\newunicodechar{β}{\ensuremath \beta}
+\usepackage{amsmath,amssymb,amsthm,amsbsy,amsfonts,mathtools}
+\usepackage{url}
+\usepackage{hyperref}
 
 \usepackage{listings}
 \lstdefinelanguage{julia}{
