--- a/2018/cite.bib
+++ b/2018/cite.bib
@@ -5,3 +5,19 @@
   year = {2018},
   note = "[GitHub issue; accessed 17-March-2018]"
 }
+@Article{stiffode,
+author="Higham, Desmond J.
+and Trefethen, Lloyd N.",
+title="Stiffness of ODEs",
+journal="BIT Numerical Mathematics",
+year="1993",
+month="Jun",
+day="01",
+volume="33",
+number="2",
+pages="285--303",
+abstract="It is argued that even for a linear system of ODEs with constant coefficients, stiffness cannot properly be characterized in terms of the eigenvalues of the Jacobian, because stiffness is a transient phenomenon whereas the significance of eigenvalues is asymptotic. Recent theory from the numerical solution of PDEs is adapted to show that a more appropriate characterization can be based upon pseudospectra instead of spectra. Numerical experiments with an adaptive ODE solver illustrate these findings.",
+issn="1572-9125",
+doi="10.1007/BF01989751",
+url="https://doi.org/10.1007/BF01989751"
+}
