Finish the first rough draft

--- a/2018/cite.bib
+++ b/2018/cite.bib
@@ -5,9 +5,9 @@
   year = {2018},
   note = "[GitHub issue; accessed 17-March-2018]"
 }
+
 @Article{stiffode,
-author="Higham, Desmond J.
-and Trefethen, Lloyd N.",
+author="Higham, Desmond J. and Trefethen, Lloyd N.",
 title="Stiffness of ODEs",
 journal="BIT Numerical Mathematics",
 year="1993",
@@ -20,4 +20,30 @@ abstract="It is argued that even for a linear system of ODEs with constant coeff
 issn="1572-9125",
 doi="10.1007/BF01989751",
 url="https://doi.org/10.1007/BF01989751"
+}
+
+@book{hairer2,
+  title={Solving Ordinary Differential Equations II: Stiff and Differential-Algebraic Problems},
+  author={Hairer, E. and Wanner, G.},
+  isbn={9783642052217},
+  series={Springer Series in Computational Mathematics},
+  url={https://books.google.com/books?id=g-jvCAAAQBAJ},
+  year={2010},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@misc{modelingtoolkit,
+  author = {Christopher Rackauckas},
+  title = {ModelingToolkit.jl},
+  howpublished = "\url{https://github.com/JuliaDiffEq/ModelingToolkit.jl}",
+  year = {2018},
+  note = "[GitHub issue; accessed 20-March-2018]"
+}
+
+@misc{parsing,
+  author = {Ivan Borisov},
+  title = {Build DiffEqSystem out of Expressions},
+  howpublished = "\url{https://github.com/JuliaDiffEq/ModelingToolkit.jl/issues/44}",
+  year = {2018},
+  note = "[GitHub issue; accessed 20-March-2018]"
 }
