--- a/2018/typesetting.tex
+++ b/2018/typesetting.tex
@@ -1,6 +1,9 @@
 \usepackage{amsmath,amssymb,amsthm,amsbsy,amsfonts,mathtools}
+\usepackage{physics}
 \usepackage{url}
 \usepackage{hyperref}
+\usepackage{tikz}
+\usepackage{pgfplots}
 
 \usepackage{listings}
 \lstdefinelanguage{julia}{
